static/assets/css/style.css
/* ... */
/* =========================================== */
/*         Password Reset Confirm              */
/* =========================================== */
.reset-password-confirm {
    background: url(../img/register-pizza.jpg) center no-repeat;
    background-size: cover;
    width: 100%;
    height: 100vh;
    position: relative;
}

.reset-password-confirm__container {
    position: absolute;
    top: 50%;
    left: 5%;
    transform: translateY(-50%);
    width: 40%;
}

.reset-password-confirm__heading {
    font-size: 5.4rem;
    text-align: center;
    letter-spacing: .2rem;
    text-transform: capitalize;
}

.reset-password-confirm__par {
    font-size: 2.2rem;
    text-align: center;
    letter-spacing: .2rem;
    text-transform: capitalize;
    font-weight: 600;
}

.reset-password-confirm__heading span {
    font-size: 5.6rem;
    color: var(--pepperoni);
}

.reset-password-confirm__form {
    max-width: 75%;
    animation: moveInBottom 1.4s ease forwards;
}

.reset-password-confirm__form label {
    font-size: 2rem;
    text-transform: capitalize;
    letter-spacing: .2rem;
    width: 80%;
    font-weight: 600;
    color: var(--delta);
}

.reset-password-confirm__form input {
    height: 4rem;
    width: 80%;
    border: none;
    outline: none;
    font-size: 2rem;
    margin: .5rem auto 1rem;
    border-radius: 1rem;
    padding: 0 1rem;
}

.reset-password-confirm__error-msg {
    font-size: 1.4rem;
    text-align: center;
    color: var(--tomato);
}

.reset-password-confirm-heading--invalid {
    font-size: 2rem;
    text-align: center;
    color: var(--tomato);
}

.reset-password-confirm-par--invalid {
    font-size: 1.4rem;
    text-align: center;
    color: var(--tomato);
}

/* =========================================== */
/*           Change Password                   */
/* =========================================== */
.password-change {
    background: url(../img/register-pizza.jpg) center no-repeat;
    background-size: cover;
    width: 100%;
    height: 100vh;
    position: relative;
}

.password-change__container {
    position: absolute;
    top: 50%;
    left: 5%;
    transform: translateY(-50%);
    width: 40%;
}

.password-change__heading {
    font-size: 5.4rem;
    text-align: center;
    letter-spacing: .2rem;
    text-transform: capitalize;
}

.password-change__par {
    font-size: 2.2rem;
    text-align: center;
    letter-spacing: .2rem;
    text-transform: capitalize;
    font-weight: 600;
}

.password-change__heading span {
    font-size: 5.6rem;
    color: var(--pepperoni);
}

.password-change__form {
    max-width: 75%;
    animation: moveInBottom 1.4s ease forwards;
}

.password-change__form label {
    font-size: 2rem;
    text-transform: capitalize;
    letter-spacing: .2rem;
    width: 80%;
    font-weight: 600;
    color: var(--delta);
}

.password-change__form input {
    height: 4rem;
    width: 80%;
    border: none;
    outline: none;
    font-size: 2rem;
    margin: .5rem auto 1rem;
    border-radius: 1rem;
    padding: 0 1rem;
}

.password-change__error-msg {
    font-size: 1.4rem;
    text-align: center;
    color: var(--tomato);
}

.password-change-heading--invalid {
    font-size: 2rem;
    text-align: center;
    color: var(--tomato);
}

.password-change-par--invalid {
    font-size: 1.4rem;
    text-align: center;
    color: var(--tomato);
}

/* =========================================== */
/*               CART                          */
/* =========================================== */
.cart-summary {
    background: url(../img/register-pizza.jpg) center no-repeat;
    background-size: cover;
    width: 100%;
    height: 100vh;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
}

.cart-summary__container {
    position: absolute;
    top: 50%;
    left: 5%;
    transform: translateY(-50%);
    width: 90%;
    max-height: 75vh;
    border-radius: .5rem;
    background: rgba(0, 0, 0, .8);
    box-shadow: 1rem 1.5rem 2rem rgba(0, 0, 0, .6);
    padding: 3rem 1rem;
    overflow-y: auto;
}

/*.cart-summary__heading {*/
/*    font-size: 5.4rem;*/
/*    text-align: center;*/
/*    letter-spacing: .2rem;*/
/*    text-transform: capitalize;*/
/*    color: var(--delta);*/
/*}*/

.cart-heading {
    color: var(--delta);
}

/*.cart-summary__heading span {*/
/*    font-size: 5.6rem;*/
/*    color: var(--pepperoni);*/
/*}*/

.cart-summary__items {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 90%;
    height: 80%;
    margin: 0 auto;
}

.cart-summary__table {
    width: 80%;
    margin: 0 auto;
    text-align: center;
}

.cart-summary__table tr {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 1rem;
    position: relative;
    padding: .5rem;
}

.cart-summary__table tr:after {
    content: "";
    position: absolute;
    bottom: -10%;
    left: 0;
    width: 100%;
    height: .2rem;
    background: var(--pepperoni);
}

.cart-summary__table .cart-summary__item {
    text-align: left;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.cart-summary__item-info {
    width: 60%;
}

.cart-summary__item-action {
    width: 25%;
}

.cart-summary__table .cart-summary__item-name,
.cart-summary__item-size,
.cart-summary__item-price,
.cart-summary__item-price span {
    font-size: 2.2rem;
    color: var(--delta);
    letter-spacing: .1rem;
}

.cart-summary__item-select,
.update-button,
.delete-button {
    font-size: 1.6rem;
    border: none;
    outline: none;
    border-radius: 2rem;
    padding: .5rem;
    font-weight: 500;
}

.cart-summary__item-select option {
    font-size: 1.6rem;
}

.update-button {
    text-transform: capitalize;
    margin: initial;
}

.delete-button {
    background: var(--tomato);
    color: #fff;
    transition: all .3s ease-in;
}

.delete-button:active,
.update-button:active {
    transform: scale(1.3);
}
/* ... */

